it all works kinda

--- a/test/react.html
+++ b/test/react.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div id="app"></div>
-	<script type="module" async="true" src="app.js"></script>
+	<script type="module" async="true" src="@compiler/entry.js"></script>
 </body>
 </html>
 
